# smtm

./: .gitignore  .pylintrc  .python-version  .travis.yml  CNAME  LICENSE  MANIFEST.in  README-en_us.md  README-ko-kr.md  README.md  RELEASE_NOTES.md  clear_notebook.bat  codecov.yml  generated_config.json  generated_config_down.json  generated_config_mix.json  hello.ipynb  index.html  jupyter_notebook.md  main.py  manifest.json  pyproject.toml  record.md  report.txt  requirements-dev.txt  requirements.txt  run_integration_test.bat  run_unittest.bat  setup.cfg  setup.py  sitemap.xml  smtm.db  style.css
.github/: FUNDING.yml
.github/workflows/: publish.yml  python-test.yml
app/: app.py
codelab/: index.md  smtm-simulation.md
config/: paper-upbit.json  virtual-upbit.json
data/: sma0_simulation.json
doc/: smtm_sequence.puml  smtm_sequence_kr.puml
docs/: TODO.md  claw-branch-review.md  exchanges-and-trading-ko.md  smtm_class.puml  smtm_component.puml
en/: index.html
example_data/: generated_config.json  generated_config_mix.json  sma0_simulation.json
integration_tests/: __init__.py  analyzer_ITG_test.py  binance_data_provider_ITG_test.py  bithumb_data_provider_ITG_test.py  data_repository_ITG_test.py  mass_simulator_ITG_test.py  operator_ITG_test.py  simulation_ITG_test.py  simulation_data_provider_ITG_test.py  simulation_operator_ITG_test.py  simulation_trader_ITG_test.py  simulator_ITG_test.py  strategy_bnh_ITG_test.py  tdd_exercise_ITG_test.py  upbit_binance_data_provider_ITG_test.py  upbit_data_provider_ITG_test.py
notebook/: analyzer-exercise.ipynb  analyzer_test.ipynb  binance_data_provider_test.ipynb  bithumb-exercise.ipynb  bithumb_data_provider_test.ipynb  bithumb_exercise.ipynb  bithumb_trader_test.ipynb  controller_ITG.ipynb  controller_test.ipynb  data_repository_test.ipynb  database_test.ipynb  jpt_controller.ipynb  logging-exercise.ipynb  simulation_data_provider_test.ipynb  simulation_operator_test.ipynb  simulation_trader_test.ipynb  strategy_bnh_test.ipynb  upbit-exercise.ipynb  upbit_data_provider_test.ipynb  upbit_exercise.ipynb  upbit_trader_ITG_test.ipynb  upbit_trader_test.ipynb
simulator/: __init__.py  data_provider.py  live_data_provider.py  loopback.py  operator.py  record.py  runner.py  simulator_data_provider.py
smtm/: .env  __init__.py  __main__.py  account_info.py  account_store.py  analyzer.py  asset_info.py  base.py  binance_data_provider.py  bithumb_data_provider.py  bithumb_exercise.py  bithumb_trader.py  candle_info.py  config.py  controller.py  data_provider.py  data_repository.py  database.py  date_converter.py  demo_trader.py  http_session.py  jpt_contoller_notebook.ipynb  jpt_controller.py  jpt_controller_notebook.ipynb  live_data_provider.py  log_manager.py  log_practice.ipynb  mass_simulator.py  operator.py  profile_store.py  python_start.ipynb  python_start_2.ipynb  record_base.py  score_record.py  session_manager.py  simulation_data_provider.py  simulation_operator.py  simulation_trader.py  simulator.py  simulator_data_provider.py  (+21 more)
tests/: analyzer_test.py  base_test.py  binance_data_provider_test.py  bithumb_data_provider_test.py  bithumb_trader_test.py  context.py  controller_test.py  data_provider_factory_test.py  data_repository_test.py  database_test.py  date_converter_test.py  demo_trader_test.py  jpt_controller_test.py  live_data_provider_test.py  log_manager_test.py  loopback_test.py  mango_data.json  mango_data_invalid_key.json  mass_simulator_test.py  operator_test.py  record_test.py  runner_test.py  simulation_ING_test.py  simulation_data_provider_test.py  simulation_operator_test.py  simulation_trader_test.py  simulator_data_provider_test.py  simulator_operator_test.py  simulator_test.py  simulator_trader_test.py  strategy_bnh_test.py  strategy_factory_test.py  strategy_hey_test.py  strategy_rsi_test.py  strategy_sma_0_test.py  strategy_sma_ml_test.py  string_method_test.py  tdd_exercise_test.py  telegram_chatbot_test.py  telegram_controller_test.py  (+9 more)
zipline/: backtrader.ipynb  buyapple.py  buyapple_out.pickle  data.txt  dma.ipynb  dma.pickle  response  zipline_basic.ipynb  zipline_basic_ipython.ipynb
(+458 files in other folders)
