[tool.poetry]
name = "smtm"
version = "0.1.0"
description = ""
authors = ["easttuna <jomin8393@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.16,<3.10"
requests = "^2.31.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
mplfinance = "^0.12.10b0"
matplotlib = "^3.8.2"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.1"
jupyter = "^1.0.0"
psutil = "^5.9.8"
coverage = "^7.4.1"
scikit-learn = "^1.4.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
