[project]
name = "smtm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.6"
dependencies = [
    "coverage>=7.10.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "mplfinance>=0.12.10b0",
    "numpy>=2.0.2",
    "pandas>=2.3.2",
    "psutil>=7.0.0",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
]
