[metadata]
name = smtm
version = attr: smtm.__version__
url = https://github.com/msaltnet/smtm
project_urls =
    Documentation = https://smtm.msalt.net/
    Source Code = https://github.com/msaltnet/smtm
    Issue Tracker = https://github.com/msaltnet/smtm/issues/
license = MIT License
author = Jeong Seongmoon
author_email = salt.jeong@gmail.com
description = A algorithm crypto trading system.
long_description = file: README.md, LICENSE
keywords = crypto, algorithm, trading
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
install_requires =
    requests
    pandas
    numpy
    mplfinance
    matplotlib
    pyjwt
    python-dotenv
    jupyter
    psutil
    coverage
    scikit-learn

[options.packages.find]
include = smtm*