[metadata]
name = smtm
version = attr: smtm.__version__
url = https://github.com/msaltnet/smtm
project_urls =
    Documentation = https://smtm.msalt.net/
    Source Code = https://github.com/msaltnet/smtm
    Issue Tracker = https://github.com/msaltnet/smtm/issues/
license = MIT License
author = Jeong Seongmoon
author_email = salt.jeong@gmail.com
description = A algorithm crypto trading system.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = crypto, algorithm, trading
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
install_requires =
    requests>=2.28,<3.0
    pandas>=1.5,<3.0
    numpy>=1.23,<3.0
    mplfinance>=0.12,<1.0
    matplotlib>=3.6,<4.0
    pyjwt>=2.0,<3.0
    python-dotenv>=0.19,<2.0
    jupyter>=1.0,<2.0
    psutil>=5.9,<7.0
    scikit-learn>=1.1,<2.0

[options.extras_require]
dev =
    pytest
    coverage
    pylint
    black

[options.packages.find]
include = smtm*