[metadata]
name = smtm
version = attr: smtm.__version__
url = https://github.com/msaltnet/smtm
project_urls =
    Documentation = https://smtm.msalt.net/
    Source Code = https://github.com/msaltnet/smtm
    Issue Tracker = https://github.com/msaltnet/smtm/issues/
license = MIT License
author = Jeong Seongmoon
author_email = salt.jeong@gmail.com
description = An LLM-powered autonomous crypto trading system.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = crypto, llm, trading, autonomous
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
install_requires =
    requests>=2.28,<3.0
    pyjwt>=2.0,<3.0
    python-dotenv>=0.19,<2.0
    anthropic>=0.25,<1.0

[options.extras_require]
dev =
    pytest
    coverage
    pylint
    black

[options.packages.find]
include = smtm*